FIx buy tickets on mobile

--- a/themes/dissent/static/css/mobile.css
+++ b/themes/dissent/static/css/mobile.css
@@ -195,3 +195,7 @@ footer {font-size:1.5em;}
 .features-banner-container .feature-banner .number {font-size:4em; height:1em;}
 .features-banner-container .feature-banner .description {font-size:3em;}
 .features-banner-container {/* width: 100%; */ margin:40px 0 0 0;}
+
+.bg-purple.buy-ticket .title {font-size:3rem;}
+.bg-purple.buy-ticket .text {font-size:1.5rem;margin-bottom:1em; min-width:400px;  max-width:100%;font-family:LatoLight;}
+.bg-purple.buy-ticket .fee {font-size:2.3rem;}
